--- a/section/static/css/styles.css
+++ b/section/static/css/styles.css
@@ -1075,7 +1075,11 @@ input[type="checkbox"] {
             max-width: 100%;
             height: 200px;
         }
-
+        & .bottom {
+            display: flex;
+            justify-content: space-between;
+            font-size: 13px;
+        }
         & .date {
             opacity: 0.6;
             padding: 0 5px 0 0;
